tests/templates/onpremises/07-headlamp-sso-no-service-proxy/baseline/manifests/ingress/policies/forecastle/forecastle.yaml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forecastle-ingress-pomerium
  namespace: forecastle
  labels:
    cluster.kfd.sighup.io/module: ingress
spec:
  podSelector:
    matchLabels:
      app: forecastle
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: pomerium
          podSelector:
            matchLabels:
              app: pomerium
      ports:
        - port: 3000
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forecastle-egress-kube-apiserver
  namespace: forecastle
  labels:
    cluster.kfd.sighup.io/module: ingress
spec:
  podSelector:
    matchLabels:
      app: forecastle
  policyTypes:
    - Egress
  egress:
  - ports:
    - port: 6443
      protocol: TCP
